<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.guesser.GuesserActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setDistance"
        android:text="@string/setDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        ></androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/max_distance"
        android:text="100"
        app:layout_constraintTop_toBottomOf="@+id/setDistance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        ></androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/meter"
        android:text="@string/meter"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@+id/max_distance"
        app:layout_constraintTop_toBottomOf="@+id/setDistance"
        ></androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/game_create_btn"
        android:text="@string/game_create"
        app:layout_constraintLeft_toRightOf="@+id/setDistance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        ></androidx.appcompat.widget.AppCompatButton>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/meter"
        app:layout_constraintBottom_toTopOf="@+id/select_btn"
        app:layout_constraintVertical_bias="0.05"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_street_view_btn"
        android:text="@string/show_street"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/select_btn"
        ></androidx.appcompat.widget.AppCompatButton>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/select_btn"
        android:text="@string/select"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/show_street_view_btn"
        app:layout_constraintRight_toRightOf="parent"
        ></androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>
